--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,12 @@ jobs:
       with:
         gradle-version: '8.5'
 
+    # THIS IS THE NEW PART THAT FIXES THE ERROR
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+
     - name: Build the App
-      run: gradle assembleDebug --stacktrace
+      run: ./gradlew assembleDebug --stacktrace
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
